# mx-tweak

./: .gitignore  02gtk3-nocsd-mx  10-mx-default.rules  10-udisks2.rules  20-amd.conf  20-intel.conf  CMakeLists.txt  CMakePresets.json  README.md  about.cpp  about.h  base_manager.cpp  base_manager.h  brightness_small.cpp  brightness_small.h  brightness_small.ui  build.sh  cmd.cpp  cmd.h  compositor_manager.cpp  compositor_manager.h  defaultlook.cpp  defaultlook.h  defaultlook.ui  desktop_detector.cpp  desktop_detector.h  firefox  images.qrc  main.cpp  mx-tweak-brightness-tray.desktop  mx-tweak-systray.desktop  mx-tweak-tray-app-autostart.desktop  mx-tweak.desktop  mx-tweak.pro  mx-tweak_23.10.01mx23.dsc  mx-tweak_23.10.01mx23.tar.xz  mx-tweak_23.10.01mx23_arm64.changes  mx-tweak_23.10.01mx23_arm64.deb  mx-tweak_23.10.01mx23_source.changes  no-ellipse-desktop-filenames.rc  (+42 more)
.github/workflows/: codeql.yml
actions/: org.mxlinux.pkexec.mx-tweak.policy
deb/: mx-tweak_17.07.01.dsc  mx-tweak_17.07.01.tar.xz  mx-tweak_17.07.01_amd64.changes  mx-tweak_17.07.01_amd64.deb  mx-tweak_17.07.01_i386.changes  mx-tweak_17.07.01_i386.deb  mx-tweak_17.07.02.dsc  mx-tweak_17.07.02.tar.xz  mx-tweak_17.07.02_amd64.changes  mx-tweak_17.07.02_amd64.deb  mx-tweak_17.07.02_i386.changes  mx-tweak_17.07.02_i386.deb  mx-tweak_17.07.dsc  mx-tweak_17.07.tar.xz  mx-tweak_17.07_amd64.changes  mx-tweak_17.07_amd64.deb  mx-tweak_17.07_i386.changes  mx-tweak_17.07_i386.deb
debian/: changelog  control  copyright  install  postinst  rules
debian/source/: options
debs/: mx-tweak-dbgsym_18.06.01+nmu1_amd64.deb  mx-tweak-dbgsym_18.06.01+nmu2_amd64.deb  mx-tweak-dbgsym_18.06.01_amd64.deb  mx-tweak-dbgsym_18.08.01_amd64.deb  mx-tweak-dbgsym_19.02.01_amd64.deb  mx-tweak-dbgsym_19.02.01_i386.deb  mx-tweak-dbgsym_19.03.01_i386.deb  mx-tweak-dbgsym_19.03.02_amd64.deb  mx-tweak-dbgsym_19.03.02_i386.deb  mx-tweak-dbgsym_19.05.03_amd64.deb  mx-tweak-dbgsym_19.08.01_amd64.deb  mx-tweak-dbgsym_19.08.03_amd64.deb  mx-tweak-dbgsym_19.08.03_i386.deb  mx-tweak_18.06.01+nmu1.dsc  mx-tweak_18.06.01+nmu1.tar.xz  mx-tweak_18.06.01+nmu1_amd64.changes  mx-tweak_18.06.01+nmu1_amd64.deb  mx-tweak_18.06.01+nmu2.dsc  mx-tweak_18.06.01+nmu2.tar.xz  mx-tweak_18.06.01+nmu2_amd64.changes  mx-tweak_18.06.01+nmu2_amd64.deb  mx-tweak_18.06.01.dsc  mx-tweak_18.06.01.tar.xz  mx-tweak_18.06.01_amd64.changes  mx-tweak_18.06.01_amd64.deb  mx-tweak_18.08.01.dsc  mx-tweak_18.08.01.tar.xz  mx-tweak_18.08.01_amd64.changes  mx-tweak_18.08.01_amd64.deb  mx-tweak_19.02.01.dsc  mx-tweak_19.02.01.tar.xz  mx-tweak_19.02.01_amd64.changes  mx-tweak_19.02.01_amd64.deb  mx-tweak_19.02.01_i386.changes  mx-tweak_19.02.01_i386.deb  mx-tweak_19.03.02.dsc  mx-tweak_19.03.02.tar.xz  mx-tweak_19.03.02_amd64.changes  mx-tweak_19.03.02_amd64.deb  mx-tweak_19.03.02_i386.changes  (+43 more)
help/: .mx-tweak.html.kate-swp  mx-tweak.html
lib/: backlight-brightness  kdeglobals  mx-tweak-check.sh  mx-tweak-kde-edit.sh  mx-tweak-lib-randr.sh  mx-tweak-lib.sh  mx-tweak-rootcheck.sh  reset-kde-mx
share/: 20-radeon.conf  hexchat.conf  xfce4-panel-tweaks.css  zcompton.desktop  zpicom.desktop
sudoers/: backlight-brightness-mx
test_debs/: mx-tweak_24.11.02mx23+nmu1.dsc  mx-tweak_24.11.02mx23+nmu1.tar.xz  mx-tweak_24.11.02mx23+nmu1_amd64.build  mx-tweak_24.11.02mx23+nmu1_amd64.buildinfo  mx-tweak_24.11.02mx23+nmu1_amd64.changes  mx-tweak_24.11.02mx23+nmu1_amd64.deb  mx-tweak_24.11.02mx23.dsc  mx-tweak_24.11.02mx23.tar.xz  mx-tweak_24.11.02mx23_amd64.build  mx-tweak_24.11.02mx23_amd64.buildinfo  mx-tweak_24.11.02mx23_amd64.changes  mx-tweak_24.11.02mx23_amd64.deb
translations/: .ts  get_translations  mx-tweak_af.ts  mx-tweak_am.ts  mx-tweak_ar.ts  mx-tweak_ast.ts  mx-tweak_be.ts  mx-tweak_bg.ts  mx-tweak_bn.ts  mx-tweak_bs.ts  mx-tweak_bs_BA.ts  mx-tweak_ca.ts  mx-tweak_ceb.ts  mx-tweak_co.ts  mx-tweak_cs.ts  mx-tweak_cy.ts  mx-tweak_da.ts  mx-tweak_de.ts  mx-tweak_el.ts  mx-tweak_en.ts  mx-tweak_en_GB.ts  mx-tweak_en_US.ts  mx-tweak_eo.ts  mx-tweak_es.ts  mx-tweak_es_ES.ts  mx-tweak_et.ts  mx-tweak_eu.ts  mx-tweak_fa.ts  mx-tweak_fi.ts  mx-tweak_fi_FI.ts  mx-tweak_fil.ts  mx-tweak_fil_PH.ts  mx-tweak_fr.ts  mx-tweak_fr_BE.ts  mx-tweak_fr_FR.ts  mx-tweak_fy.ts  mx-tweak_ga.ts  mx-tweak_gd.ts  mx-tweak_gl.ts  mx-tweak_gl_ES.ts  (+91 more)
translations (copy 1)/: mx-tweak_ar.ts  mx-tweak_bg.ts  mx-tweak_bn.ts  mx-tweak_ca.ts  mx-tweak_cs.ts  mx-tweak_da.ts  mx-tweak_de.ts  mx-tweak_el.ts  mx-tweak_es.ts  mx-tweak_et.ts  mx-tweak_eu.ts  mx-tweak_fa.ts  mx-tweak_fi.ts  mx-tweak_fil_PH.ts  mx-tweak_fr.ts  mx-tweak_he_IL.ts  mx-tweak_hi.ts  mx-tweak_hr.ts  mx-tweak_hu.ts  mx-tweak_id.ts  mx-tweak_is.ts  mx-tweak_it.ts  mx-tweak_ja.ts  mx-tweak_ja_JP.ts  mx-tweak_kk.ts  mx-tweak_ko.ts  mx-tweak_lt.ts  mx-tweak_mk.ts  mx-tweak_mr.ts  mx-tweak_nb.ts  mx-tweak_nl.ts  mx-tweak_pl.ts  mx-tweak_pt.ts  mx-tweak_pt_BR.ts  mx-tweak_ro.ts  mx-tweak_ru.ts  mx-tweak_sk.ts  mx-tweak_sl.ts  mx-tweak_sq.ts  mx-tweak_sr.ts  (+6 more)
translations-desktop-file/: get_original_strings.sh  get_translations  push_original_strings.sh  uploadlist.txt
translations-desktop-file/.tx/: config  config_20230401193518.bak
translations-desktop-file/desktop-in/: mx-tweak-systray.desktop.in  mx-tweak-tray-app-autostart.desktop.in  mx-tweak.desktop.in  zcompton.desktop.in  zrestore-software-brightness.desktop.in
translations-desktop-file/po/: LINGUAS  mx-tweak-desktop_af.po  mx-tweak-desktop_am.po  mx-tweak-desktop_ar.po  (+124 more)
tweak/: 20-intel.conf  50-udisks.pkla  compton-launch.sh  compton.conf  control  defaultlook.cpp  defaultlook.h  defaultlook.ui  hexchat.conf  images.qrc  license.html  main.cpp  mx-tweak.desktop  mx-tweak.pro  mx-tweak_18.08.dsc  mx-tweak_18.08.tar.xz  mx-tweak_18.08_amd64.changes  mx-tweak_18.08_amd64.deb  mx-tweak_18.08_i386.deb  mx.tweak.template  no-ellipse-desktop-filenames.css  old_control  remove_user_theme_set.h  theming_to_tweak.cpp  theming_to_tweak.h  theming_to_tweak.ui  tweak-update-initramfs.sh  window_buttons.cpp  window_buttons.ui  xfwm_compositor_settings.h  xfwm_compositor_settings.ui
(+55 files in other folders)
